[package]
name = "web-authn-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
rand = "0.8.5"
serde = {version="1.0.152",features = ["derive"] }
base64 = "0.21.2"
uuid = {version="1.4.1", features = ["v4"]}
ring = "0.16"
serde_json = "1.0.60"